--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <main class="main">
             <section class="slider">
                 <section class="slider__wrapper">
-                    <h3 class="slider__title">Australia</h3>
+                    <h3 class="slider__title">Karo jojo 🤣</h3>
                     <p class="slider__text">Pixel perfect design with awesome
                         contents</p>
                     <a href="#" class="silder__btn">Explore Now</a>
