--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <main class="main">
             <section class="slider">
                 <section class="slider__wrapper">
-                    <h3 class="slider__title">Karo jojo 🤣</h3>
+                    <h3 class="slider__title"> Iran </h3>
                     <p class="slider__text">Pixel perfect design with awesome
                         contents</p>
                     <a href="#" class="silder__btn">Explore Now</a>
@@ -72,7 +72,7 @@
                             <img src="images/1.png" alt>
                         </div>
                         <div class="popular-info">
-                            <p> Italy <a href="#">07 Places</a></p>
+                            <p> Indonesia <a href="#">04 Places</a></p>
                         </div>
                     </article>
                     <article class="popular-article">
@@ -88,7 +88,7 @@
                             <img src="images/3.png" alt>
                         </div>
                         <div class="popular-info">
-                            <p> Italy <a clas href="#">07 Places</a></p>
+                            <p> France <a clas href="#">01 Places</a></p>
                         </div>
                     </article>
                     <article class="popular-article">
@@ -96,7 +96,7 @@
                             <img src="images/4.png" alt>
                         </div>
                         <div class="popular-info">
-                            <p> Italy <a href="#">07 Places</a></p>
+                            <p> Canada <a href="#">07 Places</a></p>
                         </div>
                     </article>
                     <article class="popular-article">
@@ -104,7 +104,7 @@
                             <img src="images/5.png" alt>
                         </div>
                         <div class="popular-info">
-                            <p> Italy <a href="#">07 Places</a></p>
+                            <p> America <a href="#">11 Places</a></p>
                         </div>
                     </article>
                     <article class="popular-article">
@@ -112,7 +112,7 @@
                             <img src="images/6.png" alt>
                         </div>
                         <div class="popular-info">
-                            <p> Italy <a href="#">07 Places</a></p>
+                            <p> England <a href="#">05 Places</a></p>
                         </div>
                     </article>
 
@@ -163,7 +163,7 @@
                             </ul>
                             <ul class="links--right">
                                 <li class="list-link"><a href="#">India</a></li>
-                                <li class="list-link"><a href="#">Franch</a></li>
+                                <li class="list-link"><a href="#">France</a></li>
                                 <li class="list-link"><a href="#">Switzerland</a></li>
                                 <li class="list-link"><a href="#">England</a></li>
                             </ul> 
